--- a/quadratic.ipynb
+++ b/quadratic.ipynb
@@ -1,6 +1,11 @@
 {
   "cells": [
     {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "# 二次方程式の解\n二次方程式$ax^2+bx+c=0$の解を求める関数。判別式を$d=b^2-4ac$とすると、$d\\ge 0$の時は、二つの実数解を持つ。\n$$\nx\\pm=\\frac{-b\\pm\\sqrt{d}}{2a}\n$$\n$d<0$の時は、二つの複素数解を持つ。コード中の\"1j\"は虚数単位$i$を表す。\n$$\nx\\pm=\\frac{-b\\pm i\\sqrt{-d}}{2a}\n$$"
+    },
+    {
       "metadata": {
         "trusted": true
       },
@@ -10,16 +15,11 @@
       "outputs": []
     },
     {
-      "metadata": {},
-      "cell_type": "markdown",
-      "source": "二次方程式$ax^2+bx+c=0$の解を求める関数。判別式を$d=b^2-4ac$とすると、$d\\ge 0$の時は、二つの実数解を持つ。\n$$\nx\\pm=\\frac{-b\\pm\\sqrt{d}}{2a}\n$$\n$d<0$の時は、二つの複素数解を持つ。コード中の\"1j\"は虚数単位$i$を表す。\n$$\nx\\pm=\\frac{-b\\pm i\\sqrt{-d}}{2a}\n$$"
-    },
-    {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def quadratic(a,b,c):#二次方程式の解\n    d = b*b-4*a*c#判別式\n    if d >= 0:#実数解\n        x1 = (-b + math.sqrt(d))/(2*a)\n        x2 = (-b - math.sqrt(d))/(2*a)\n    else:#複素数解\n        x1 = (-b + 1j*math.sqrt(-d))/(2*a)\n        x2 = (-b - 1j*math.sqrt(-d))/(2*a)\n    ans = (x1,x2)#二つの値を戻す\n    return ans",
+      "source": "def quadratic(a,b,c):#二次方程式の解\n    d = b*b-4*a*c#判別式\n    if d >= 0:#実数解\n        x1 = (-b + math.sqrt(d))/(2*a)\n        x2 = (-b - math.sqrt(d))/(2*a)\n    else:#複素数解\n        x1 = (-b + 1j*math.sqrt(-d))/(2*a)\n        x2 = (-b - 1j*math.sqrt(-d))/(2*a)\n    ans = (x1,x2)#二つの値を戻す。タプルになっている\n    return ans",
       "execution_count": 10,
       "outputs": []
     },
@@ -40,7 +40,8 @@
     },
     {
       "metadata": {
-        "trusted": true
+        "trusted": true,
+        "scrolled": true
       },
       "cell_type": "code",
       "source": "#引数名の指定\nx1,x2=quadratic(c=1,b=2,a=1)\nprint(x1,x2)",
@@ -52,6 +53,11 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {},
+      "cell_type": "markdown",
+      "source": "# 課題\n別の$(a,b,c)$の例を作成し、結果を確認しなさい。"
     }
   ],
   "metadata": {
