--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -3,14 +3,31 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "# 階乗の再帰的定義\n\n関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(recursive)という。\n最も簡単な例の一つは階乗である。階乗は\n$$n! = 1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\nである。これを\n$$n! = n\\times (n-1)!,\\ 1!=1$$\nと表現することができる。\n\n関数factorial()がfactorial()で定義されている。\n無限に再帰しないように、停止条件が必須であることに注意する。"
+      "source": [
+        "# 階乗の再帰的定義\n",
+        "\n",
+        "関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(recursive)という。\n",
+        "最も簡単な例の一つは階乗である。階乗は\n",
+        "$$n! = 1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\n",
+        "である。これを\n",
+        "$$n! = n\\times (n-1)!,\\ 0!=1$$\n",
+        "と表現することができる。\n",
+        "\n",
+        "関数factorial()がfactorial()で定義されている。\n",
+        "無限に再帰しないように、停止条件が必須であることに注意する。"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def factorial(n):\n    if n == 1:\n        return 1\n    return n * factorial(n-1)",
+      "source": [
+        "def factorial(n):\n",
+        "    if n == 0:\n",
+        "        return 1\n",
+        "    return n * factorial(n-1)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -19,7 +36,11 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "m = 5\na = factorial(m)\nprint(a)",
+      "source": [
+        "m = 5\n",
+        "a = factorial(m)\n",
+        "print(a)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -28,7 +49,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "",
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
