--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -5,12 +5,22 @@
         "collapsed": true
       },
       "cell_type": "markdown",
-      "source": "# 簡単な関数の例\n\n関数は、求まりのある処理に名前を付けて作成する。関数の機能を明確にすることで、一つ一つの動作確認が容易になる。"
+      "source": [
+        "# 簡単な関数の例\n",
+        "\n",
+        "関数は、求まりのある処理に名前を付けて作成する。関数の機能を明確にすることで、一つ一つの動作確認が容易になる。"
+      ]
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "## 引数の無い関数の例\n\n関数の内部で処理を行うだけの例。\n\n呼び出し側は関数名を使う。"
+      "source": [
+        "## 引数の無い関数の例\n",
+        "\n",
+        "関数の内部で処理を行うだけの例。\n",
+        "\n",
+        "呼び出し側は関数名を使う。"
+      ]
     },
     {
       "metadata": {
@@ -18,35 +28,72 @@
         "scrolled": true
       },
       "cell_type": "code",
-      "source": "def hello():\n    print(\"こんにちは\")\n\ndef goodbye():\n    print(\"さようなら\")\n    \nhello()\ngoodbye()",
+      "source": [
+        "def hello():\n",
+        "    print(\"こんにちは\")\n",
+        "\n",
+        "def goodbye():\n",
+        "    print(\"さようなら\")\n",
+        "    \n",
+        "hello()\n",
+        "goodbye()"
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "関数から値が返ってくる例。値を返すためには、returnを使う。\n\n呼び出し側は、戻り値を変数に代入し、格納する。"
+      "source": [
+        "関数から値が返ってくる例。値を返すためには、returnを使う。\n",
+        "\n",
+        "呼び出し側は、戻り値を変数に代入し、格納する。"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def hello2():\n    return \"こんにちは\"\n\ndef goodbye2():\n    return \"さようなら\"\n    \nm1=hello2()\nm2=goodbye2()\nprint(m1)\nprint(m2)",
+      "source": [
+        "def hello2():\n",
+        "    return \"こんにちは\"\n",
+        "\n",
+        "def goodbye2():\n",
+        "    return \"さようなら\"\n",
+        "    \n",
+        "m1 = hello2()\n",
+        "m2 = goodbye2()\n",
+        "\n",
+        "print(m1)\n",
+        "print(m2)"
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。"
+      "source": [
+        "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "from random import randint\n\ndef dice():#さいころと同様に1から6までの数字をでたらめに返す\n    num = randint(1,6)\n    return num\n\nfor i in range(10):\n    x = dice()\n    print(x)",
+      "source": [
+        "from random import randint\n",
+        "\n",
+        "def dice():#さいころと同様に1から6までの数字をでたらめに返す\n",
+        "    num = randint(1,6)\n",
+        "    return num\n",
+        "\n",
+        "for i in range(10):\n",
+        "    x = dice()\n",
+        "    print(x)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -55,7 +102,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "",
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
