--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -54,7 +54,7 @@
         "        x = d[i]*2\n",
         "        d[i]=x\n",
         "\n",
-        "data = [1,4,2,5]\n",
+        "data = [1, 4, 2, 5]\n",
         "func2(data)\n",
         "print(data)"
       ],
@@ -73,7 +73,7 @@
         "        d[i]=x\n",
         "    return d\n",
         "\n",
-        "data = [1,4,2,5]\n",
+        "data = [1, 4, 2, 5]\n",
         "data2 = func3(data)\n",
         "print(data)\n",
         "print(data2)"
@@ -101,7 +101,7 @@
         "        d[i]=x\n",
         "    return d\n",
         "\n",
-        "data = [1,4,2,5]\n",
+        "data = [1, 4, 2, 5]\n",
         "data2 = func4(data)\n",
         "print(data)\n",
         "print(data2)"
