--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -26,7 +26,7 @@
         "def factorial(n):\n",
         "    if n == 0:\n",
         "        return 1\n",
-        "    return n * factorial(n-1)"
+        "    return n * factorial(n - 1)"
       ],
       "execution_count": null,
       "outputs": []
