--- a/isPrime.ipynb
+++ b/isPrime.ipynb
@@ -5,28 +5,56 @@
         "collapsed": true
       },
       "cell_type": "markdown",
-      "source": "# 与えられた数が素数か否かを判定する関数"
+      "source": [
+        "# 与えられた数が素数か否かを判定する関数"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "import math",
+      "source": [
+        "import math"
+      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "戻り値が二つあることに注意。タプルになっている。"
+      "source": [
+        "戻り値が二つあることに注意。タプルになっている。"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def isPrime(n):\n    result = False\n    if n <= 0:\n        message=f'引数は正でなければならない'\n    elif n < 2:\n        message = f'{n}は素数ではない'\n    elif n == 2:\n        message = f'{n}は素数である'\n        result = True\n    elif n % 2 == 0:\n        message = f'{n}は偶数であり、素数ではない'\n    else:\n        m=int(math.sqrt(n))\n        for k in range(3,m+1,2):#forで記述\n            if n % k == 0:\n                message = f'{n}は{k}で割り切れるため、素数ではない'\n                break\n        else:#ループの最後まで至った場合\n            message = f'{n}は素数である'\n            result = True\n    return result,message",
+      "source": [
+        "def isPrime(n):\n",
+        "    result = False\n",
+        "    if n <= 0:\n",
+        "        message=f'引数は正でなければならない'\n",
+        "    elif n < 2:\n",
+        "        message = f'{n}は素数ではない'\n",
+        "    elif n == 2:\n",
+        "        message = f'{n}は素数である'\n",
+        "        result = True\n",
+        "    elif n % 2 == 0:\n",
+        "        message = f'{n}は偶数であり、素数ではない'\n",
+        "    else:\n",
+        "        m = int(math.sqrt(n))\n",
+        "        for k in range(3, m + 1, 2):#forで記述\n",
+        "            if n % k == 0:\n",
+        "                message = f'{n}は{k}で割り切れるため、素数ではない'\n",
+        "                break\n",
+        "        else:#ループの最後まで至った場合\n",
+        "            message = f'{n}は素数である'\n",
+        "            result = True\n",
+        "    return result, message"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -35,7 +63,11 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "for i in range(2,100,2):\n    r,m = isPrime(i)\n    print(m)",
+      "source": [
+        "for i in range(2, 100, 2):\n",
+        "    r, m = isPrime(i)\n",
+        "    print(m)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -44,7 +76,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "",
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
