--- a/stat0.ipynb
+++ b/stat0.ipynb
@@ -3,14 +3,25 @@
     {
       "metadata": {},
       "cell_type": "markdown",
-      "source": "# 統計を行う関数\n引数で渡されたリスト中のデータに対して、データ数、平均を返す関数"
+      "source": [
+        "# 統計を行う関数\n",
+        "引数で渡されたリスト中のデータに対して、データ数、平均を返す関数"
+      ]
     },
     {
       "metadata": {
         "trusted": true
       },
       "cell_type": "code",
-      "source": "def stat(data):#dataは数値のリスト\n    n = len(data)\n    s = 0#和を保存\n    for x in data:#data中のすべてに対して繰り返し\n        s += x\n    average = s/n#平均\n    return n, average",
+      "source": [
+        "def stat(data):#dataは数値のリスト\n",
+        "    n = len(data)\n",
+        "    s = 0#和を保存\n",
+        "    for x in data:#data中のすべてに対して繰り返し\n",
+        "        s += x\n",
+        "    average = s / n #平均\n",
+        "    return n, average"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -19,7 +30,13 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "#データリスト\ndataList = [3,5,7,2,3,6,1,4,9,2]\nn, average = stat(dataList)\nprint('データ数 :',n)\nprint('平均:',average)",
+      "source": [
+        "#データリスト\n",
+        "dataList = [3, 5, 7, 2, 3, 6, 1, 4, 9, 2]\n",
+        "n, average = stat(dataList)\n",
+        "print('データ数 :', n)\n",
+        "print('平均:', average)"
+      ],
       "execution_count": null,
       "outputs": []
     },
@@ -28,7 +45,7 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "",
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
