--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -1,10 +1,10 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
       "metadata": {
         "collapsed": true
       },
-      "cell_type": "markdown",
       "source": [
         "# 簡単な関数の例\n",
         "\n",
@@ -12,8 +12,8 @@
       ]
     },
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## 引数の無い関数の例\n",
         "\n",
@@ -23,11 +23,13 @@
       ]
     },
     {
-      "metadata": {
-        "trusted": true,
-        "scrolled": true
-      },
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "scrolled": true,
+        "trusted": true
+      },
+      "outputs": [],
       "source": [
         "def hello():\n",
         "    print(\"こんにちは\")\n",
@@ -37,13 +39,11 @@
         "    \n",
         "hello()\n",
         "goodbye()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "関数から値が返ってくる例。値を返すためには、returnを使う。\n",
         "\n",
@@ -51,15 +51,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "def hello2():\n",
+        "def hello2() -> str:\n",
         "    return \"こんにちは\"\n",
         "\n",
-        "def goodbye2():\n",
+        "def goodbye2() -> str:\n",
         "    return \"さようなら\"\n",
         "    \n",
         "m1 = hello2()\n",
@@ -67,63 +69,57 @@
         "\n",
         "print(m1)\n",
         "print(m2)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "from random import randint\n",
         "\n",
-        "def dice():#さいころと同様に1から6までの数字をでたらめに返す\n",
+        "def dice() -> int:\n",
+        "    \"\"\"\n",
+        "    さいころと同様に1から6までの数字をでたらめに返す\n",
+        "    \"\"\"\n",
         "    num = randint(1,6)\n",
         "    return num\n",
         "\n",
         "for i in range(10):\n",
         "    x = dice()\n",
         "    print(x)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": true
-      },
-      "cell_type": "code",
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "2322be9354d0c02ae7a563e15a3b1424506aba364738ddffa4554a9ebf410fcb"
+    },
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
-      "language": "python"
+      "display_name": "Python 3.9.7 64-bit ('base': conda)",
+      "name": "python3"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.6",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
