--- a/scopeTest.ipynb
+++ b/scopeTest.ipynb
@@ -1,92 +1,96 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
       "metadata": {
         "collapsed": true
       },
-      "cell_type": "markdown",
-      "source": "# 変数のスコープ"
+      "source": [
+        "# 変数のスコープ"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": "#グローバル変数\naGlobal = 100",
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#グローバル変数\n",
+        "aGlobal = 100"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": "def func1():\n    x = aGlobal\n    return x",
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def func1():\n",
+        "    x = aGlobal\n",
+        "    return x"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": "def func2():\n    aGlobal = 2 #このaGlobalはこの関数内のローカル変数",
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def func2():\n",
+        "    aGlobal = 2 #このaGlobalはこの関数内のローカル変数"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": "def func3():\n    y = 1",
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def func3():\n",
+        "    y = 1"
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": "print(func1())\nfunc2()\nprint(aGlobal)\nprint(y)",
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": "100\n100\n",
-          "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'y' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-3b7f52ebec91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfunc2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maGlobal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "z = func1()\n",
+        "print(z)\n",
+        "func2()\n",
+        "print(aGlobal)\n",
+        "print(y)"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python36",
       "display_name": "Python 3.6",
-      "language": "python"
+      "language": "python",
+      "name": "python36"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.6",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.6"
     }
   },
   "nbformat": 4,
