--- a/isPrime.ipynb
+++ b/isPrime.ipynb
@@ -1,39 +1,44 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
       "metadata": {
         "collapsed": true
       },
-      "cell_type": "markdown",
       "source": [
         "# 与えられた数が素数か否かを判定する関数"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "import math"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "戻り値が二つあることに注意。タプルになっている。"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "def isPrime(n):\n",
+        "def isPrime(n:int) -> tuple[bool,str]:\n",
+        "    \"\"\"\n",
+        "    引数が素数か否かを判定し、結果を理由とともに返す\n",
+        "    \"\"\"\n",
         "    result = False\n",
         "    if n <= 0:\n",
         "        message=f'引数は正でなければならない'\n",
@@ -54,50 +59,50 @@
         "            message = f'{n}は素数である'\n",
         "            result = True\n",
         "    return result, message"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
         "for i in range(2, 100, 2):\n",
         "    r, m = isPrime(i)\n",
         "    print(m)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "ddafbbf4347d0b4a8ca2d67a8cf47c9a236a0ee7708cf872d86a0b5d08596010"
+    },
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
-      "language": "python"
+      "display_name": "Python 3.9.7 64-bit (windows store)",
+      "name": "python3"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.6",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
