--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -1,8 +1,8 @@
 {
   "cells": [
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# 階乗の再帰的定義\n",
         "\n",
@@ -18,59 +18,80 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "def factorial(n):\n",
+        "def factorial(n:int) -> int:\n",
+        "    \"\"\"\n",
+        "    階乗\n",
+        "    \"\"\"\n",
+        "    if n < 0:\n",
+        "        raise ValueError('argument must not be negative')\n",
         "    if n == 0:\n",
         "        return 1\n",
         "    return n * factorial(n - 1)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "argument must not be negative",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/b8/x2pck72n05354z1__7pg3n9h0000gn/T/ipykernel_15063/315011058.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/var/folders/b8/x2pck72n05354z1__7pg3n9h0000gn/T/ipykernel_15063/3472870184.py\u001b[0m in \u001b[0;36mfactorial\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \"\"\"\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'argument must not be negative'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: argument must not be negative"
+          ]
+        }
+      ],
       "source": [
         "m = 5\n",
         "a = factorial(m)\n",
         "print(a)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "5b50574aca822a4663eeb358827631e5cbe081f130521b0066dec6b864ef6f2f"
+    },
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
-      "language": "python"
+      "display_name": "Python 3.9.7 ('myenv')",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.6",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
