--- a/stat0.ipynb
+++ b/stat0.ipynb
@@ -1,72 +1,77 @@
 {
   "cells": [
     {
-      "metadata": {},
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# 統計を行う関数\n",
         "引数で渡されたリスト中のデータに対して、データ数、平均を返す関数"
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [],
       "source": [
-        "def stat(data):#dataは数値のリスト\n",
+        "def stat(data:list[float]) -> tuple[int,float]:\n",
+        "    \"\"\"\n",
+        "    引数で渡されたリスト中のデータに対して、データ数、平均を返す関数\n",
+        "    \"\"\"\n",
         "    n = len(data)\n",
-        "    s = 0#和を保存\n",
-        "    for x in data:#data中のすべてに対して繰り返し\n",
+        "    s = 0 #和を保存\n",
+        "    for x in data: #data中のすべてに対して繰り返し\n",
         "        s += x\n",
         "    average = s / n #平均\n",
         "    return n, average"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "trusted": true
       },
-      "cell_type": "code",
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "データ数 : 10\n",
+            "平均: 4.2\n"
+          ]
+        }
+      ],
       "source": [
         "#データリスト\n",
         "dataList = [3, 5, 7, 2, 3, 6, 1, 4, 9, 2]\n",
         "n, average = stat(dataList)\n",
         "print('データ数 :', n)\n",
         "print('平均:', average)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "trusted": true
-      },
-      "cell_type": "code",
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "interpreter": {
+      "hash": "ddafbbf4347d0b4a8ca2d67a8cf47c9a236a0ee7708cf872d86a0b5d08596010"
+    },
     "kernelspec": {
-      "name": "python36",
-      "display_name": "Python 3.6",
-      "language": "python"
+      "display_name": "Python 3.9.7 64-bit (windows store)",
+      "name": "python3"
     },
     "language_info": {
-      "mimetype": "text/x-python",
-      "nbconvert_exporter": "python",
-      "name": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.6",
-      "file_extension": ".py",
       "codemirror_mode": {
-        "version": 3,
-        "name": "ipython"
-      }
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
     }
   },
   "nbformat": 4,
