--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -28,6 +28,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "引数の後ろの\":\"で、引数の型を指定"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -63,7 +71,7 @@
       },
       "outputs": [],
       "source": [
-        "def func2(d:list[float]):\n",
+        "def func2(d:list[float]) -> None:\n",
         "    \"\"\"\n",
         "    リストの各要素を2倍にする\n",
         "    \"\"\"\n",
@@ -141,7 +149,7 @@
         "    \"\"\"\n",
         "    リストの各要素をk倍して、別のリストを返す\n",
         "    \"\"\"\n",
-        "    d = list(dd)\n",
+        "    d:list[float] = list(dd)\n",
         "    for i in range(len(d)):\n",
         "        x = d[i] * k\n",
         "        d[i] = x\n",
@@ -183,11 +191,9 @@
     }
   ],
   "metadata": {
-    "interpreter": {
-      "hash": "ddafbbf4347d0b4a8ca2d67a8cf47c9a236a0ee7708cf872d86a0b5d08596010"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.7 64-bit (windows store)",
+      "display_name": "Python 3.9.10 ('myenv')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -200,7 +206,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.9.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "b3b804b6b7a7d9b475cf928428dd1242016eacc24c47853aaf0f8d1d2228aa39"
+      }
     }
   },
   "nbformat": 4,
