--- a/isPrime.ipynb
+++ b/isPrime.ipynb
@@ -38,6 +38,14 @@
         "def isPrime(n:int) -> tuple[bool,str]:\n",
         "    \"\"\"\n",
         "    引数が素数か否かを判定し、結果を理由とともに返す\n",
+        "\n",
+        "    Parameters\n",
+        "    ------\n",
+        "    n: 判定対象の整数\n",
+        "\n",
+        "    Return\n",
+        "    ------\n",
+        "    (t, m): t=Trueならばnは素数、mは判定時のメッセージ\n",
         "    \"\"\"\n",
         "    result = False\n",
         "    if n <= 0:\n",
@@ -69,7 +77,7 @@
       },
       "outputs": [],
       "source": [
-        "for i in range(2, 100, 2):\n",
+        "for i in range(3, 100, 2):\n",
         "    r, m = isPrime(i)\n",
         "    print(m)"
       ]
@@ -85,11 +93,9 @@
     }
   ],
   "metadata": {
-    "interpreter": {
-      "hash": "ddafbbf4347d0b4a8ca2d67a8cf47c9a236a0ee7708cf872d86a0b5d08596010"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.7 64-bit (windows store)",
+      "display_name": "myenv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -102,7 +108,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:25:29) [Clang 14.0.6 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "5b50574aca822a4663eeb358827631e5cbe081f130521b0066dec6b864ef6f2f"
+      }
     }
   },
   "nbformat": 4,
