--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "collapsed": true
@@ -8,10 +9,11 @@
       "source": [
         "# 簡単な関数の例\n",
         "\n",
-        "関数は、求まりのある処理に名前を付けて作成する。関数の機能を明確にすることで、一つ一つの動作確認が容易になる。"
+        "関数は、一まとまりの処理に名前を付けて作成する。関数の機能を明確にすることで、一つ一つの動作確認が容易になる。"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -19,7 +21,7 @@
         "\n",
         "関数の内部で処理を行うだけの例。\n",
         "\n",
-        "呼び出し側は関数名を使う。"
+        "呼び出しには、関数名を使う。"
       ]
     },
     {
@@ -31,10 +33,10 @@
       },
       "outputs": [],
       "source": [
-        "def hello():\n",
+        "def hello() -> None:\n",
         "    print(\"こんにちは\")\n",
         "\n",
-        "def goodbye():\n",
+        "def goodbye() -> None:\n",
         "    print(\"さようなら\")\n",
         "    \n",
         "hello()\n",
@@ -42,12 +44,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "関数から値が返ってくる例。値を返すためには、returnを使う。\n",
         "\n",
-        "呼び出し側は、戻り値を変数に代入し、格納する。"
+        "呼び出し側は、戻り値を変数に代入し、格納する。\n",
+        "\n",
+        "関数名の後ろの\"->\"は、戻り値の型を表す。無くてもよい。"
       ]
     },
     {
@@ -72,10 +77,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。"
+        "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。\n",
+        "\n",
+        "関数の後ろの三つ続くダブルクォーテーションの部分で、関数の説明を記述する。"
       ]
     },
     {
