--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "collapsed": true
@@ -8,10 +9,11 @@
       "source": [
         "# 関数の定義と引数\n",
         "\n",
-        "「引数」(arguments)とは、関数に渡すオブジェクトのこと。"
+        "「引数」(_arguments_)とは、関数に渡すオブジェクトのこと。"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -32,7 +34,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "引数の後ろの\":\"で、引数の型を指定"
+        "引数の後ろの`:`で、引数の型を指定することができる。指定しなくても良い。"
       ]
     },
     {
@@ -57,6 +59,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -94,7 +97,7 @@
       "source": [
         "def func3(d:list[float]) -> list[float]:\n",
         "    \"\"\"\n",
-        "    リストの各要素を2乗にする\n",
+        "    リストの各要素を2乗したものを要素として上書きする\n",
         "    \"\"\"\n",
         "\n",
         "    for i in range(len(d)):\n",
@@ -109,6 +112,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -125,7 +129,7 @@
       "source": [
         "def func4(dd:list[float]) -> list[float]:\n",
         "    \"\"\"\n",
-        "    リストの各要素を2倍して、別のリストを返す\n",
+        "    リストの各要素を2倍して、別のリストとして返す\n",
         "    \"\"\"\n",
         "    d = list(dd)\n",
         "    for i in range(len(d)):\n",
@@ -147,7 +151,7 @@
       "source": [
         "def func5(dd:list[float], k:float) -> list[float]:\n",
         "    \"\"\"\n",
-        "    リストの各要素をk倍して、別のリストを返す\n",
+        "    リストの各要素をk倍して、別のリストとして返す\n",
         "    \"\"\"\n",
         "    d:list[float] = list(dd)\n",
         "    for i in range(len(d)):\n",
@@ -162,13 +166,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
       "source": [
         "## 課題\n",
-        "$0\\le x<1$のfloat型の引数を受け取り、$0\\le x<0.5$ならば$-1$を、$0.5\\le x<1$ならば$+1$を、それ以外ならば$0$を返す関数func5()を定義し、動作を確かめなさい。"
+        "$0\\le x<1$のfloat型の引数を受け取り、$0\\le x<0.5$ならば$-1$を、$0.5\\le x<1$ならば$+1$を、それ以外ならば$0$を返す関数`func5()`を定義し、動作を確かめなさい。"
       ]
     },
     {
