--- a/argumentsTest1.ipynb
+++ b/argumentsTest1.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 引数の省略\n",
+    "\n",
+    "関数の引数にデフォルト(_default_)値、つまり指定しない場合の値を設定することができる。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -20,6 +30,9 @@
     "    ---\n",
     "    str such as 0x******\n",
     "    \"\"\"\n",
+    "    red = red % 256\n",
+    "    green = green % 256\n",
+    "    blue = blue % 256\n",
     "    redStr = format(red, '02x')\n",
     "    greenStr = format(green, '02x')\n",
     "    blueStr = format(blue, '02x')\n",
