--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -1,19 +1,20 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "# 階乗の再帰的定義\n",
         "\n",
-        "関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(recursive)という。\n",
+        "関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(_recursive_)という。\n",
         "最も簡単な例の一つは階乗である。階乗は\n",
         "$$n! = 1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\n",
         "である。これを\n",
         "$$n! = n\\times (n-1)!,\\ 0!=1$$\n",
         "と表現することができる。\n",
         "\n",
-        "関数factorial()がfactorial()で定義されている。\n",
+        "関数`factorial()`が`factorial()`で定義されている。\n",
         "無限に再帰しないように、停止条件が必須であることに注意する。"
       ]
     },
