--- a/quiz.ipynb
+++ b/quiz.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -10,14 +11,14 @@
         "$$\n",
         "x\\pm=\\frac{-b\\pm\\sqrt{d}}{2a}\n",
         "$$\n",
-        "$d<0$の時は、二つの複素数解を持つ。コード中の\"1j\"は虚数単位$i$を表す。\n",
+        "$d<0$の時は、二つの複素数解を持つ。コード中の`1j`は虚数単位$i=\\sqrt{-1}$を表す。\n",
         "$$\n",
         "x\\pm=\\frac{-b\\pm i\\sqrt{-d}}{2a}\n",
         "$$\n",
-        "係数の組$a$、$b$、$c$を与えて、二次方程式の解を返す関数quadratic()を完成させなさい。なお、二つの解はタプルとして返すこととする。\n",
+        "係数の組$a$、$b$、$c$を与えて、二次方程式の解を返す関数`quadratic()`を完成させなさい。なお、二つの解はタプルとして返すこととする。\n",
         "\n",
-        "- 平方根$\\sqrt{x}$の計算にはmath.sqrt(x)を使う\n",
-        "- 複素数$a+ib$($i$は虚数単位)を表すにはa+1j*bとする。"
+        "- 平方根$\\sqrt{x}$の計算には`math.sqrt(x)`を使う\n",
+        "- 複素数$a+ib$($i$は虚数単位)を表すには`a+1j*b`とする。"
       ]
     },
     {
@@ -87,6 +88,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
