--- a/scopeTest.ipynb
+++ b/scopeTest.ipynb
@@ -1,12 +1,16 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "collapsed": true
       },
       "source": [
-        "# 変数のスコープ"
+        "# 変数のスコープ\n",
+        "\n",
+        "- pythonでは、変数の有効範囲(_scope_)を関数内に制限することができる。\n",
+        "- ノートブック全体で有効な変数をグローバル(_global_)という。"
       ]
     },
     {
@@ -30,7 +34,7 @@
       "outputs": [],
       "source": [
         "def func1():\n",
-        "    x = aGlobal\n",
+        "    x = aGlobal #グローバル変数の値を代入\n",
         "    return x"
       ]
     },
