--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -18,10 +18,11 @@
       "metadata": {},
       "source": [
         "## 引数の無い関数の例\n",
-        "\n",
-        "関数の内部で処理を行うだけの例。\n",
-        "\n",
-        "呼び出しには、関数名を使う。"
+        "- 関数の定義\n",
+        "    - `def 関数名():`\n",
+        "    - `None`は、戻り値がないことを表す\n",
+        "- 関数の内部で処理を行うだけの例。\n",
+        "- 呼び出しには、関数名を使う。"
       ]
     },
     {
@@ -48,11 +49,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "関数から値が返ってくる例。値を返すためには、returnを使う。\n",
+        "### 関数から値(戻り値)が返ってくる例\n",
+        "- 値を返すためには、`return`を使う。\n",
+        "- 呼び出し側は、戻り値を変数に代入し、格納する。\n",
         "\n",
-        "呼び出し側は、戻り値を変数に代入し、格納する。\n",
-        "\n",
-        "関数名の後ろの\"->\"は、戻り値の型を表す。無くてもよい。"
+        "関数名の後ろの\"->\"は、戻り値の型を表す。無くてもよい。以下の例では文字列が返ってくることを示している。"
       ]
     },
     {
@@ -81,9 +82,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "関数内部で乱数を生成する例。1から6までの整数をでたらめに生成する（さいころの模倣）。\n",
-        "\n",
-        "関数の後ろの三つ続くダブルクォーテーションの部分で、関数の説明を記述する。"
+        "関数内部で乱数を生成する例\n",
+        "- 1から6までの整数をでたらめに生成する（さいころの模倣）。\n",
+        "- 関数の後ろの三つ続くダブルクォーテーションの部分で、関数の説明を記述する。"
       ]
     },
     {
@@ -127,7 +128,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.8"
     }
   },
   "nbformat": 4,
