--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -20,9 +20,12 @@
         "## 引数の無い関数の例\n",
         "- 関数の定義\n",
         "    - `def 関数名():`\n",
-        "    - `None`は、戻り値がないことを表す\n",
-        "- 関数の内部で処理を行うだけの例。\n",
-        "- 呼び出しには、関数名を使う。"
+        "    - インデントで関数の範囲を指定する\n",
+        "    - `-> None`は、戻り値がないことを表す\n",
+        "    - 戻り値の型は記述しなくてもよいが\n",
+        "    - 戻り値の型を記述するのは、解りやすさのため\n",
+        "- 関数の内部で処理を行うだけの例\n",
+        "- 呼び出しには、関数名を使う"
       ]
     },
     {
@@ -53,7 +56,7 @@
         "- 値を返すためには、`return`を使う。\n",
         "- 呼び出し側は、戻り値を変数に代入し、格納する。\n",
         "\n",
-        "関数名の後ろの\"->\"は、戻り値の型を表す。無くてもよい。以下の例では文字列が返ってくることを示している。"
+        "`-> str`は文字列が返ってくることを示している。"
       ]
     },
     {
