--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# 関数の定義と引数\n",
         "\n",
-        "「引数」(_arguments_)とは、関数に渡すオブジェクトのこと。"
+        "「引数」(_arguments_)とは、関数に渡すオブジェクトのこと。複数の引数をとることがあることから、「引数並び」ということが多い。"
       ]
     },
     {
@@ -63,7 +63,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "mutable変数(変更できる変数)が引数の場合、関数内部でその要素を変更すると、呼び出し側の要素も変化する。"
+        "mutable変数(変更できる変数)が引数の場合、関数内部でその要素を変更すると、呼び出し側の要素も変化する。以下の例では、`data`そのものを変更していることに注意。"
       ]
     },
     {
@@ -151,7 +151,7 @@
       "source": [
         "def func5(dd:list[float], k:float) -> list[float]:\n",
         "    \"\"\"\n",
-        "    リストの各要素をk倍して、別のリストとして返す\n",
+        "    リストの各要素を k 倍して、別のリストとして返す\n",
         "    \"\"\"\n",
         "    d:list[float] = list(dd)\n",
         "    for i in range(len(d)):\n",
