--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -9,12 +9,12 @@
         "\n",
         "関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(_recursive_)という。\n",
         "最も簡単な例の一つは階乗である。階乗は\n",
-        "$$n! = 1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\n",
+        "$$n! = \\prod_{k=1}^nk=1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\n",
         "である。これを\n",
         "$$n! = n\\times (n-1)!,\\ 0!=1$$\n",
         "と表現することができる。\n",
         "\n",
-        "関数`factorial()`が`factorial()`で定義されている。\n",
+        "上記に対応して、階乗を計算する関数`factorial(n)`を`factorial(n-1)`を用いて定義する。\n",
         "無限に再帰しないように、停止条件が必須であることに注意する。"
       ]
     },
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "def factorial(n:int) -> int:\n",
+        "def factorial(n: int) -> int:\n",
         "    \"\"\"\n",
         "    階乗\n",
         "    \"\"\"\n",
@@ -49,15 +49,6 @@
         "a = factorial(m)\n",
         "print(a)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
