--- a/isPrime.ipynb
+++ b/isPrime.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "collapsed": true
@@ -21,10 +22,11 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "戻り値が二つあることに注意。タプルになっている。"
+        "戻り値が二つあり、タプルにとして返すことに注意する。"
       ]
     },
     {
@@ -81,15 +83,6 @@
         "    r, m = isPrime(i)\n",
         "    print(m)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
