--- a/quiz.ipynb
+++ b/quiz.ipynb
@@ -41,6 +41,17 @@
       "outputs": [],
       "source": [
         "def quadratic(a:float,b:float,c:float)->tuple[complex,complex]:#二次方程式の解\n",
+        "    \"\"\"\n",
+        "    二次方程式 a x^2 + b x + c =0 の解を返す\n",
+        "\n",
+        "    ------\n",
+        "    Parameters\n",
+        "    a, b, c: 二次方程式の係数\n",
+        "\n",
+        "    ------\n",
+        "    Returns \n",
+        "    (x_1, x_2): 二つの解\n",
+        "    \"\"\"\n",
         "    d = b*b-4*a*c#判別式\n",
         "    if d >= 0:#実数解\n",
         "\n",
