--- a/isPrime.ipynb
+++ b/isPrime.ipynb
@@ -50,24 +50,24 @@
         "    (t, m): t=Trueならばnは素数、mは判定時のメッセージ\n",
         "    \"\"\"\n",
         "    result = False\n",
-        "    if n <= 0:\n",
-        "        message=f'引数は正でなければならない'\n",
-        "    elif n < 2:\n",
-        "        message = f'{n}は素数ではない'\n",
-        "    elif n == 2:\n",
-        "        message = f'{n}は素数である'\n",
-        "        result = True\n",
-        "    elif n % 2 == 0:\n",
-        "        message = f'{n}は偶数であり、素数ではない'\n",
-        "    else:\n",
-        "        m = int(math.sqrt(n))\n",
-        "        for k in range(3, m + 1, 2):#forで記述\n",
-        "            if n % k == 0:\n",
-        "                message = f'{n}は{k}で割り切れるため、素数ではない'\n",
-        "                break\n",
-        "        else:#ループの最後まで至った場合\n",
-        "            message = f'{n}は素数である'\n",
+        "    message = f'{n}は素数である'\n",
+        "    match n:\n",
+        "        case n if n <= 0:\n",
+        "            message=f'引数は正でなければならない'\n",
+        "        case n if n < 2:\n",
+        "            message = f'{n}は素数ではない'\n",
+        "        case 2:\n",
         "            result = True\n",
+        "        case n if n % 2 == 0:\n",
+        "            message = f'{n}は偶数であり、素数ではない'\n",
+        "        case _:\n",
+        "            m = int(math.sqrt(n))\n",
+        "            for k in range(3, m + 1, 2):#forで記述\n",
+        "                if n % k == 0:\n",
+        "                    message = f'{n}は{k}で割り切れるため、素数ではない'\n",
+        "                    break\n",
+        "            else:#ループの最後まで至った場合\n",
+        "                result = True\n",
         "    return result, message"
       ]
     },
