--- a/stat0.ipynb
+++ b/stat0.ipynb
@@ -37,7 +37,7 @@
       "outputs": [],
       "source": [
         "#データリスト\n",
-        "dataList = [3, 5, 7, 2, 3, 6, 1, 4, 9, 2]\n",
+        "dataList:list[float] = [3, 5, 7, 2, 3, 6, 1, 4, 9, 2]\n",
         "n, average = stat(dataList)\n",
         "print('データ数 :', n)\n",
         "print('平均:', average)"
