--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -82,7 +82,7 @@
         "        x = d[i] * 2\n",
         "        d[i] = x\n",
         "\n",
-        "data = [1, 4, 2, 5]\n",
+        "data = [1., 4., 2., 5.]\n",
         "func2(data)\n",
         "print(data)"
       ]
@@ -105,7 +105,7 @@
         "        d[i] = x\n",
         "    return d\n",
         "\n",
-        "data = [1, 4, 2, 5]\n",
+        "data = [1., 4., 2., 5.]\n",
         "data2 = func3(data)\n",
         "print(data)\n",
         "print(data2)"
@@ -137,7 +137,7 @@
         "        d[i] = x\n",
         "    return d\n",
         "\n",
-        "data = [1, 4, 2, 5]\n",
+        "data = [1., 4., 2., 5.]\n",
         "data2 = func4(data)\n",
         "print(data)\n",
         "print(data2)"
@@ -159,7 +159,7 @@
         "        d[i] = x\n",
         "    return d\n",
         "\n",
-        "data = [1, 4, 2, 5]\n",
+        "data = [1., 4., 2., 5.]\n",
         "data2 = func5(data, 3)\n",
         "print(data)\n",
         "print(data2)"
