--- a/argumentsTest1.ipynb
+++ b/argumentsTest1.ipynb
@@ -48,7 +48,8 @@
    "source": [
     "print(setRGB())\n",
     "print(setRGB(red = 253))\n",
-    "print(setRGB(green = 20, blue = 250))"
+    "print(setRGB(green = 20, blue = 250))\n",
+    "print(setRGB(green = 20, red = 250))\n"
    ]
   }
  ],
@@ -70,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   },
   "orig_nbformat": 2
  },
