--- a/argumentsTest.ipynb
+++ b/argumentsTest.ipynb
@@ -8,8 +8,8 @@
       },
       "source": [
         "# 関数の定義と引数\n",
-        "\n",
-        "「引数」(_arguments_)とは、関数に渡すオブジェクトのこと。複数の引数をとることがあることから、「引数並び」ということが多い。"
+        "- 「引数」(_arguments_)とは、関数に渡すオブジェクトのこと。\n",
+        "- 複数の引数をとることがあることから、「引数並び」ということが多い。"
       ]
     },
     {
@@ -17,7 +17,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "inmutable 変数 (変更できない変数) が引数の場合、関数内部でその値を変更しても、呼び出し側の変数の値は変わらない"
+        "`immutable` 変数 (変更できない変数) が引数の場合、関数内部でその値を変更しても、呼び出し側の変数の値は変わらない"
       ]
     },
     {
@@ -34,7 +34,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "引数の後ろの`:`で、引数の型を指定することができる。指定しなくても良い。"
+        "- 引数の後ろの`:`で、引数の型を指定することができる。指定しなくても良い。\n",
+        "- 型ヒントを付けると、何を引数として渡すべきかがわかりやすい"
       ]
     },
     {
@@ -63,7 +64,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "mutable変数(変更できる変数)が引数の場合、関数内部でその要素を変更すると、呼び出し側の要素も変化する。以下の例では、`data`そのものを変更していることに注意。"
+        "`mutable`変数(変更できる変数)が引数の場合、関数内部でその要素を変更すると、呼び出し側の要素も変化する。以下の例では、`data`そのものを変更していることに注意。"
       ]
     },
     {
