--- a/argumentsTest1.ipynb
+++ b/argumentsTest1.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def setRGB(red = 0, green = 0, blue=0) -> str:\n",
+    "def setRGB(red:int = 0, green:int = 0, blue:int = 0) -> str:\n",
     "    \"\"\"\n",
     "    convert rgb decimal expression to hex expression\n",
     "\n",
