--- a/simpleFunctions.ipynb
+++ b/simpleFunctions.ipynb
@@ -8,8 +8,9 @@
       },
       "source": [
         "# 簡単な関数の例\n",
-        "\n",
-        "関数は、一まとまりの処理に名前を付けて作成する。関数の機能を明確にすることで、一つ一つの動作確認が容易になる。"
+        "- 関数は、一まとまりの処理に名前を付けて作成する。\n",
+        "- 関数の機能を明確にすることで、一つ一つの動作確認が容易になる。\n",
+        "- 関数とすることで、その処理を再利用できる。"
       ]
     },
     {
@@ -23,8 +24,15 @@
         "    - インデントで関数の範囲を指定する\n",
         "    - `-> None`は、戻り値がないことを表す\n",
         "    - 戻り値の型は記述しなくてもよいが\n",
-        "    - 戻り値の型を記述するのは、解りやすさのため\n",
-        "- 関数の内部で処理を行うだけの例\n",
+        "        - 戻り値の型を記述するのは、解りやすさのため\n",
+        "        - 戻り値の型を記述しておくと、呼び出し側からも戻り値の型が分かる\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 関数の内部で処理を行うだけの例\n",
         "- 呼び出しには、関数名を使う"
       ]
     },
@@ -56,7 +64,8 @@
         "- 値を返すためには、`return`を使う。\n",
         "- 呼び出し側は、戻り値を変数に代入し、格納する。\n",
         "\n",
-        "`-> str`は文字列が返ってくることを示している。"
+        "- `-> str`は文字列が返ってくることを示している。\n",
+        "    - 呼び出し側の`m1`と`m2`が文字列であることが分かる"
       ]
     },
     {
@@ -85,9 +94,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "関数内部で乱数を生成する例\n",
+        "### 関数内部で乱数を生成する例\n",
         "- 1から6までの整数をでたらめに生成する（さいころの模倣）。\n",
-        "- 関数の後ろの三つ続くダブルクォーテーションの部分で、関数の説明を記述する。"
+        "- 関数の後ろの三つ続くダブルクォーテーションの部分で、関数の説明を記述する。\n",
+        "    - 呼び出し側の関数名にマウスを合わせると、説明を参照できる"
       ]
     },
     {
