--- a/factorial.ipynb
+++ b/factorial.ipynb
@@ -9,9 +9,16 @@
         "\n",
         "関数の中には、引数の値が異なる同じ関数で定義されるものがある。このような定義を再帰的(_recursive_)という。\n",
         "最も簡単な例の一つは階乗である。階乗は\n",
-        "$$n! = \\prod_{k=1}^nk=1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n$$\n",
+        "$$\n",
+        "\\begin{align*}\n",
+        "n! &= \\prod_{k=1}^nk=1\\times 2\\times 3\\times \\cdots \\times(n-1)\\times n\n",
+        "\\end{align*}\n",
+        "$$\n",
         "である。これを\n",
-        "$$n! = n\\times (n-1)!,\\ 0!=1$$\n",
+        "$$\\begin{align*}\n",
+        "n! &= n\\times (n-1)!\\\\\n",
+        "0!&=1\n",
+        "\\end{align*}$$\n",
         "と表現することができる。\n",
         "つまり、$n!$という$n$を引数とする関数は、同じ関数の$n-1$を引数とする関数の値を得ることができれば、それに$n$を乗じることで得ることができる。\n",
         "\n",
@@ -39,6 +46,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "値$n!$がどのように確定していくかに注意する。例えば、$n=3$の場合、$0!=1$が最初に確定し、その後、$1!=1\\times 1=1$、$2!=2\\times 1=2$、$3!=3\\times 2=6$と順次確定していく。"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -49,6 +63,55 @@
         "m = 5\n",
         "a = factorial(m)\n",
         "print(a)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 課題: Fibonacci数列の再帰的定義\n",
+        "$$\n",
+        "\\begin{align*}\n",
+        "F(0) &= 0\\\\\n",
+        "F(1) &= 1\\\\\n",
+        "F(n) &= F(n-1) + F(n-2),\\ n\\ge 2\n",
+        "\\end{align*}\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "fibonacci(0) = 0\n",
+            "fibonacci(1) = 1\n",
+            "fibonacci(2) = 1\n",
+            "fibonacci(3) = 2\n",
+            "fibonacci(4) = 3\n",
+            "fibonacci(5) = 5\n",
+            "fibonacci(6) = 8\n",
+            "fibonacci(7) = 13\n",
+            "fibonacci(8) = 21\n",
+            "fibonacci(9) = 34\n"
+          ]
+        }
+      ],
+      "source": [
+        "def fibonacci(n: int) -> int:\n",
+        "    \"\"\"\n",
+        "    フィボナッチ数列\n",
+        "    \"\"\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "for k in range(10):\n",
+        "    v = fibonacci(k)\n",
+        "    print(f'fibonacci({k}) = {v}')"
       ]
     }
   ],
@@ -71,7 +134,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
